--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org'
+          scope: '@smartbase-js'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
