--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raiaccept/raiaccept-api-client",
+  "name": "@smartbase-js/raiaccept-api-client",
   "version": "0.9.0",
   "description": "TypeScript SDK for RaiAccept payment gateway API",
   "main": "dist/index.js",
@@ -18,7 +18,9 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "unit-tests": "vitest run tests/unit.test.js",
-    "integration-tests": "vitest run --config vitest.integration.config.js"
+    "integration-tests": "vitest run --config vitest.integration.config.js",
+    "prepublishOnly": "npm run build",
+    "publish:public": "npm publish --access public"
   },
   "keywords": [
     "raiaccept",
