--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,4 +1,4 @@
-name: build
+name: Trivy
 on:
   push:
     branches:
@@ -19,6 +19,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
+          scanners: 'vuln,secret'
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
