--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Check if credentials are available
       id: check-creds
       run: |
-        if [ -z "${{ secrets.RAIACCEPT_TEST_USERNAME }}" ] || [ -z "${{ secrets.RAIACCEPT_TEST_PASSWORD }}" ]; then
+        if [ -z "${{ secrets.RAIACCEPT_TEST_USERNAME }}" ] || [ -z "${{ secrets.RAIACCEPT_TEST_PASSWORD }}" ] || [ -z "${{ secrets.RAIACCEPT_TEST_CERT_BASE64 }}" ] || [ -z "${{ secrets.RAIACCEPT_TEST_KEY_BASE64 }}" ]; then
           echo "skip=true" >> $GITHUB_OUTPUT
           echo "⚠️  Integration tests skipped: GitHub Secrets not configured"
           echo "See .github/SETUP_CI.md for setup instructions"
@@ -69,4 +69,6 @@ jobs:
       env:
         RAIACCEPT_TEST_USERNAME: ${{ secrets.RAIACCEPT_TEST_USERNAME }}
         RAIACCEPT_TEST_PASSWORD: ${{ secrets.RAIACCEPT_TEST_PASSWORD }}
+        RAIACCEPT_TEST_CERT_BASE64: ${{ secrets.RAIACCEPT_TEST_CERT_BASE64 }}
+        RAIACCEPT_TEST_KEY_BASE64: ${{ secrets.RAIACCEPT_TEST_KEY_BASE64 }}
       run: npm run integration-tests
